--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+.container{
+    width:100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+}
+.page{
+    display: flex;
+    flex-direction: column;
+}
+
 .err-msg{
     color:#f00;
     margin:0;
