--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,19 @@
-.container{
-    width:100%;
-    height: 100%;
-    position: absolute;
-    top:0;
-}
-.page{
-    display: flex;
-    flex-direction: column;
-}
-
 .err-msg{
     color:#f00;
     margin:0;
     padding: 0;
+}
+.am-tab-bar{
+    position: fixed;
+    bottom: 0;
+    width:100%;
+    height:auto;
+}
+.fixed-header.am-navbar{
+    position: fixed;
+    top:0;
+    width:100%;
+}
+.page-content{
+    padding:45px 5px;
 }
