--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     position: fixed;
     bottom: 0;
     width:100%;
-    height:auto;
+    height:auto !important;
 }
 .fixed-header.am-navbar{
     position: fixed;
@@ -15,5 +15,15 @@
     width:100%;
 }
 .page-content{
-    padding:45px 5px;
+     padding:45px 5px;
+ }
+#chat-page .chat-me .am-list-extra{
+    flex-basis:auto;
+}
+#chat-page .chat-me .am-list-content{
+    padding-right: 15px;
+    text-align: right;
+}
+.stick-footer{
+    z-index: 10;
 }
