--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
     position: fixed;
     top:0;
     width:100%;
+    z-index: 100;
 }
 .page-content{
      padding:45px 5px;
@@ -24,8 +25,15 @@
     padding-right: 15px;
     text-align: right;
 }
+#chat-page .am-grid-icon{
+    display: none;
+}
+#chat-page .am-grid-text{
+    margin-top: 0;
+}
 .stick-footer{
     z-index: 10;
     position: fixed;
+    width: 100%;
     bottom: 0;
 }
